--- a/style.css
+++ b/style.css
@@ -17,9 +17,15 @@ h1 {
 }
 
 hr {
-  border-color:#ee4b08;
-  border-width: 3px;
+  margin: 20px auto;
+  color:#f05F44;
+  border: 3px solid #f05F44;
   max-width: 65px;
+  opacity: 1;
+}
+
+.buffer {
+  height: 10rem;
 }
 
 .btn {
